feat: dev package docker command